--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,4 +1,18 @@
+@import './variables.scss';
+
+html {
+  font-size: 62.5%;
+  
+  &, * {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 body {
   background-color: #222;
   color: #fafafa;
+  font-size: 1.6rem;
+  font-family: $font-family;
+  font-weight: 400;
 }
