--- a/client/components/List/List.scss
+++ b/client/components/List/List.scss
@@ -1,14 +1,29 @@
 @import '../../styles/variables.scss';
 
 .list {
-  min-width: 25rem;
-  background-color: #444;
-  margin: 0 $listSpacing;
+  width: 25rem;
   border-radius: 0.25rem;
-}
 
-.title {
-  display: inline-block;
-  padding: 1rem 1.5rem;
-  font-size: 1.7rem;
+  .header {
+    min-height: $list-header-min-height;
+    display: flex;
+    flex-direction: column;
+
+    .info-wrapper {
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+    
+      .title {
+        flex-grow: 1;
+        display: inline-block;
+        padding: 1rem 0;
+        font-size: 1.7rem;
+      }
+    
+      .options-btn {
+        padding: 0 1.1rem;
+      }
+    }
+  }
 }
