--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -10,9 +10,15 @@ html {
 }
 
 body {
-  background-color: #222;
-  color: #fafafa;
+  background-color: $bg-color;
+  color: $text-color;
   font-size: 1.6rem;
   font-family: $font-family;
   font-weight: 400;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
