--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
+@import url('https://css.gg/css');
 
 $font-family: 'Nunito Sans', sans-serif;
 
-$listSpacing: 0.7rem;
+$listSpacing: 3rem;
+
+$bg-color: #222823;
+$text-color: #F4F7F5;
+
+$list-header-min-height: 5rem;
