--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -3,9 +3,15 @@
 
 $font-family: 'Nunito Sans', sans-serif;
 
-$listSpacing: 3rem;
+$list-spacing: 3rem;
+$list-width: 28rem;
 
 $bg-color: #222823;
 $text-color: #F4F7F5;
+$highlight-color: #E8871E;
+$accent-color: #A7A2A9;
+
+$base-transition-t: 0.25s;
 
 $list-header-min-height: 5rem;
+$list-title-font-size: 1.7rem;
