--- a/client/components/App/App.scss
+++ b/client/components/App/App.scss
@@ -1,12 +1,17 @@
 @import '../../styles/variables.scss';
 
+$add-icon-width: 5rem;
+$edit-icon-width: 3rem;
+$divider-width: 1px;
+
 .lists {
   display: flex;
   align-items: flex-start;
   padding-top: 2rem;
 
   & > * {
-   margin: 0 $listSpacing;
+    flex-shrink: 0;
+    margin: 0 $list-spacing;
   }
 
   .add-list {
@@ -14,19 +19,68 @@
     flex-direction: column;
     min-height: $list-header-min-height;
 
-    .icon {
+    .header {
+      display: flex;
       flex-grow: 1;
-      width: 5rem;
 
-      i {
-        --ggs: 1.2;
-        margin-top: 0.1rem;
+      input {
+        visibility: hidden;
+        width: 0;
+        border: none;
+        font-size: $list-title-font-size;
+        background-color: transparent;
+        transition: width $base-transition-t ease-out;
+        margin: 0.7rem 0;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .add-toggle-icon {
+        width: $add-icon-width;
+      }
+
+      .icon {
+        i {
+          margin-top: 0.15rem;
+          transition: transform $base-transition-t * 1.5 cubic-bezier(.31,2.06,.36,1.03);
+        }
+      }
+
+      .divider {
+        width: $divider-width;
+        margin: 1.3rem 0;
+        background-color: rgba($accent-color, 0.5);
+      }
+    }
+
+    &.adding-list {
+      .icon {
+        width: $edit-icon-width;
+      }
+
+      .add-toggle-icon {
+        justify-content: flex-end;
+
+        i {
+          transform: rotate(45deg);
+        }
+      }
+
+      .confirm-add-icon {
+        justify-content: flex-start;
+      }
+      
+      .header > input {
+        visibility: visible;
+        width: $list-width - $edit-icon-width * 2.0;
       }
     }
   }
 }
 
 .list-underline {
-  background-color: #A7A2A9;
+  background-color: $accent-color;
   height: 0.5rem;
 }
