--- a/client/app/App/App.scss
+++ b/client/app/App/App.scss
@@ -1,4 +1,5 @@
 @import '../../styles/variables.scss';
+@import '../../styles/mixins.scss';
 
 $add-icon-width: 5rem;
 $edit-icon-width: 3rem;
@@ -24,17 +25,12 @@ $divider-width: 1px;
       flex-grow: 1;
 
       input {
+        @include reset-input;
         visibility: hidden;
         width: 0;
-        border: none;
         font-size: $list-title-font-size;
-        background-color: transparent;
         transition: width $base-transition-t ease-out;
         margin: 0.7rem 0;
-
-        &:focus {
-          outline: none;
-        }
       }
 
       .add-toggle-icon {
@@ -45,6 +41,15 @@ $divider-width: 1px;
         i {
           margin-top: 0.15rem;
           transition: transform $base-transition-t * 1.5 cubic-bezier(.31,2.06,.36,1.03);
+          transition: color $base-transition-t;
+
+          &.gg-math-plus {
+            color: $text-color;
+          }
+        }
+
+        &:hover i.gg-math-plus {
+          color: $highlight-color;
         }
       }
 
@@ -56,25 +61,41 @@ $divider-width: 1px;
     }
 
     &.adding-list {
+      $cancel-icon-width-w: 0.95;
+
       .icon {
         width: $edit-icon-width;
+
+        &:hover {
+          i.gg-check {
+            color: $yes-color;
+          }
+  
+          i.gg-math-plus {
+            color: $no-color;
+          }
+        }
       }
 
-      .add-toggle-icon {
+      .header .add-toggle-icon {
         justify-content: flex-end;
-
+        width: $edit-icon-width * $cancel-icon-width-w;
+        
         i {
           transform: rotate(45deg);
+          color: $no-inactive-color;
         }
       }
 
       .confirm-add-icon {
         justify-content: flex-start;
+        color: $yes-inactive-color;
+        --ggs: 1.2;
       }
       
       .header > input {
         visibility: visible;
-        width: $list-width - $edit-icon-width * 2.0;
+        width: $list-width - $edit-icon-width * (1.0 + $cancel-icon-width-w);
       }
     }
   }
