--- a/client/app/Card/Card.scss
+++ b/client/app/Card/Card.scss
@@ -1,8 +1,8 @@
 @import '../../styles/variables.scss';
 
 .card {
-  background-color: #343;
-  border-radius: 1rem;
+  background-color: $card-bg;
+  border-radius: $list-border-r * 0.62;
   padding: 1rem 1.5rem;
-  margin-top: 1.7rem;
+  margin-top: 2rem;
 }
