Options button click/blur functionality and more styling

--- a/client/app/App/App.scss
+++ b/client/app/App/App.scss
@@ -37,6 +37,8 @@ $divider-width: 1px;
       }
 
       .icon {
+        @include icon-clickable;
+        
         i {
           margin-top: 0.15rem;
           transition: transform $transition-base * 1.5 cubic-bezier(.31,2.06,.36,1.03);
