--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './mixins.scss';
 
 html {
   font-size: 62.5%;
@@ -6,6 +7,10 @@ html {
   &, * {
     margin: 0;
     padding: 0;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
@@ -21,13 +26,5 @@ body {
 }
 
 .icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: color $transition-base;
-
-  &:hover {
-    cursor: pointer;
-    color: $highlight-color;
-  }
+  @include icon-base;
 }
