--- a/client/app/Card/Card.scss
+++ b/client/app/Card/Card.scss
@@ -3,7 +3,7 @@
 
 .card {
   $min-height: 4.4rem;
-  $border-r: $list-border-r * 0.62;
+  $border-r: $card-border-r;
   $padding-r: 0.2rem;
   $options-highlight-w: 0.3rem;
 
@@ -14,7 +14,7 @@
   padding-left: 1.5rem;
   margin-top: 2rem;
   min-height: $min-height;
-  transition: background-color 0.1s;
+  transition: background-color $transition-fast;
   position: relative;
 
   .title {
@@ -61,6 +61,7 @@
   }
 
   .options-container {
+    @include drop-shadow;
     z-index: 1;
     $margin-left: 1rem;
     left: calc(100% + #{$margin-left});
@@ -76,7 +77,7 @@
     }
 
     .option-item {
-      @include default-color-transition;
+      @include clickable;
       display: flex;
       padding: 1rem;
 
@@ -87,10 +88,6 @@
         .gg-trash {
           margin-bottom: 0.3rem;
         }
-      }
-
-      &:hover {
-        color: $highlight-color;
       }
 
       &.remove {
