--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -18,17 +18,29 @@
   transition: color $transition-base;
 }
 
-@mixin icon-base {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-@mixin icon-clickable {
+@mixin clickable {
   @include default-color-transition;
-  
+
   &:hover {
     cursor: pointer;
     color: $highlight-color;
   }
+}
+
+@mixin drop-shadow {
+  box-shadow: 0 0 2px 1px rgba(black, 0.3);
+}
+
+@mixin overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@mixin flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
