--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -7,6 +7,7 @@ $list-spacing: 2rem;
 $list-width: 28rem;
 $list-border-r: 0.7rem;
 $card-border-r: $list-border-r * 0.62;
+$card-padding-lr: 1.5rem;
 
 $icon-btn-width: 3rem;
 
