Fix oveflow issues of card title

--- a/client/app/Card/Card.scss
+++ b/client/app/Card/Card.scss
@@ -20,6 +20,8 @@
   .title {
     flex-grow: 1;
     padding: 1rem 0;
+    word-wrap: break-word;
+    min-width: 0;
   }
 
   .options-highlight, .options-container {
