--- a/client/app/CardDetails/CardDetails.scss
+++ b/client/app/CardDetails/CardDetails.scss
@@ -84,5 +84,13 @@
       display: flex;
       flex-direction: column;
     }
+
+    textarea {
+      cursor: pointer;
+
+      &:focus {
+        cursor: inherit;
+      }
+    }
   }
 }
