--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -23,6 +23,7 @@ $overlay-bg-color: rgba(black, 0.3);
 
 $card-bg: #525B60;
 $list-bg: lighten($bg-color, 9%);
+$options-bg: lighten($bg-color, 7%);
 
 $transition-base: 0.2s;
 $transition-fast: 0.1s;
