--- a/client/styles/mixins.scss
+++ b/client/styles/mixins.scss
@@ -75,6 +75,11 @@
       .gg-trash {
         margin-bottom: 0.3rem;
       }
+
+      .gg-move-right {
+        --ggs: 1.2;
+        margin-right: 0.2rem;
+      }
     }
 
     &.remove {
