--- a/client/app/CardDetails/CardDetails.scss
+++ b/client/app/CardDetails/CardDetails.scss
@@ -87,10 +87,16 @@
 
     textarea {
       cursor: pointer;
+      margin-bottom: 0.5rem;
 
       &:focus {
         cursor: inherit;
       }
+    }
+
+    .btn, .undo-btn {
+      @include clickable;
+      margin-right: 1rem;
     }
   }
 }
