Added filter by title

--- a/client/app/Board/Board.scss
+++ b/client/app/Board/Board.scss
@@ -4,6 +4,10 @@
 $add-icon-width: 5rem;
 $divider-width: 1px;
 
+.filter-container {
+  background-color: lighten($bg-color, 10%);
+}
+
 .lists {
   display: flex;
   align-items: flex-start;
