--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;400&display=swap');
+@import url('https://css.gg/css');
 @import './variables.scss';
 @import './mixins.scss';
 
